[package]
name = "markup5ever_arcdom"
version = "0.1.1"
license = "MIT / Apache-2.0"
authors = ["Max Gonzih <gonzih@gmail.com>"]
repository = "https://github.com/Gonzih/markup5ever_arcdom"
description = "Thread safe version of RcDom from html5ever project."
readme = "README.md"
documentation = "https://docs.rs/markup5ever_arcdom"
categories = [ "parser-implementations", "web-programming" ]
edition = "2018"
publish = true

[lib]
path = "lib.rs"

[dependencies]
tendril = "0.4"
html5ever = { version = "0.25" }
markup5ever = { version = "0.10" }
xml5ever = { version = "0.16" }

[dev-dependencies]
serde_json = "1.0"
rustc-test = "0.3"

[[test]]
name = "html-tokenizer"
harness = false

[[test]]
name = "html-tree-builder"
harness = false

[[test]]
name = "xml-tree-builder"
harness = false

[[test]]
name = "xml-tokenizer"
harness = false
